cambio en el diseÃ±o de los colores de botones

--- a/src/components/Communities.css
+++ b/src/components/Communities.css
@@ -84,7 +84,7 @@
 }
 
 .view-selector-tab.active {
-  background: #143c4d;
+  background: #3e63f8;
   color: #F5F5F5;
   font-weight: 700;
   border: none;
