--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -60,7 +60,7 @@
 .default-avatar-large {
   width: 100%;
   height: 100%;
-  background: #143c4d;
+  background: #3E63F8;
   color: #F5F5F5;
   display: flex;
   align-items: center;
