--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -192,7 +192,7 @@
 .default-avatar {
   width: 100%;
   height: 100%;
-  background: #143c4d;
+  background: #3E63F8;
   color: #F5F5F5;
   display: flex;
   align-items: center;
